Bug 14435 - lookuprids handles STATUS_SOME_UNMAPPED incorrectly
Summary: lookuprids handles STATUS_SOME_UNMAPPED incorrectly
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Winbind (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-08 13:11 UTC by Volker Lendecke
Modified: 2020-08-11 07:20 UTC (History)
1 user (show)

See Also:


Attachments
Patch for 4.11 (4.81 KB, patch)
2020-07-10 10:10 UTC, Volker Lendecke
slow: review+
vl: ci-passed+
Details
Patch for 4.12 (4.81 KB, patch)
2020-07-10 10:10 UTC, Volker Lendecke
slow: review+
vl: ci-passed+
Details
Patch for 4.13 (4.81 KB, patch)
2020-07-10 10:11 UTC, Volker Lendecke
slow: review+
vl: ci-passed+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Lendecke 2020-07-08 13:11:53 UTC
Have patch, need bugnumber
Comment 1 Volker Lendecke 2020-07-10 10:10:02 UTC
Created attachment 16125 [details]
Patch for 4.11

https://gitlab.com/samba-team/devel/samba/-/pipelines/165135765
Comment 2 Volker Lendecke 2020-07-10 10:10:57 UTC
Created attachment 16126 [details]
Patch for 4.12

https://gitlab.com/samba-team/devel/samba/-/pipelines/165131205
Comment 3 Volker Lendecke 2020-07-10 10:11:42 UTC
Created attachment 16127 [details]
Patch for 4.13

https://gitlab.com/samba-team/devel/samba/-/pipelines/165129939
Comment 4 Ralph Böhme 2020-07-10 10:19:05 UTC
Reassigning to Karolin for inclusion in 4.11, 4.12 and 4.13.
Comment 5 Karolin Seeger 2020-07-17 09:46:35 UTC
(In reply to Ralph Böhme from comment #4)
Pushed to autobuild-v4-{12,11}-test.
autobuild-v4-13-test needs to be setup.
Comment 6 Karolin Seeger 2020-08-06 11:22:03 UTC
(In reply to Karolin Seeger from comment #5)
Patch does not apply on current v4-13-test branch.
Comment 7 Karolin Seeger 2020-08-06 11:24:29 UTC
Hi Volker,

the 4.13 patch doesn't not apply any longer on current v4-13-test branch (source3/selftest/tests.py:365). Could you update the patchset, please?
Thanks!
Comment 8 Karolin Seeger 2020-08-06 11:38:10 UTC
Worked with git cherry-pick -2 (thanks, Metze :-).
Pushed to autobuild-v4-13-test.
Comment 9 Karolin Seeger 2020-08-11 07:20:42 UTC
(In reply to Karolin Seeger from comment #8)
Pushed to v4-13-test.
Closing out bug report.

Thanks!